@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,7 @@
  * @bug 8027314
  * @summary Warn if experimental vm option is used and -XX:+UnlockExperimentalVMOptions isn't specified.
  * @requires vm.flagless
- * @requires ! vm.opt.final.UnlockExperimentalVMOptions
+ * @requires !vm.opt.final.UnlockExperimentalVMOptions
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
  *          java.management
@@ -37,22 +37,53 @@
  * @bug 8027314
  * @summary Warn if diagnostic vm option is used and -XX:+UnlockDiagnosticVMOptions isn't specified.
  * @requires vm.flagless
- * @requires ! vm.debug
+ * @requires !vm.debug
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
  *          java.management
  * @run driver VMOptionWarning Diagnostic
  */
 
+/* @test VMCompileCommandWarningDiagnostic
+ * @bug 8351958
+ * @summary Warn if compile command that is an alias for a diagnostic vm option is used and -XX:+UnlockDiagnosticVMOptions isn't specified.
+ * @requires vm.flagless
+ * @requires !vm.debug
+ * @library /test/lib
+ * @modules java.base/jdk.internal.misc
+ *          java.management
+ * @run driver VMOptionWarning DiagnosticCompileCommand
+ */
+
 /* @test VMOptionWarningDevelop
  * @bug 8027314
  * @summary Warn if develop vm option is used with product version of VM.
  * @requires vm.flagless
- * @requires ! vm.debug
+ * @requires !vm.debug
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
  *          java.management
  * @run driver VMOptionWarning Develop
+ */
+
+/* @test VMOptionWarningCompactObjectHeaders
+ * @bug 8360700
+ * @summary Warn if -XX:+UseCompactObjectHeaders is used with -XX:-UseObjectMonitorTable
+ * @requires vm.flagless
+ * @library /test/lib
+ * @modules java.base/jdk.internal.misc
+ *          java.management
+ * @run driver VMOptionWarning CompactObjectHeaders
+ */
+
+/* @test VMOptionWarningUseObjectMonitorTable
+ * @bug 8360700
+ * @summary Warn if -XX:-UseObjectMonitorTable is used without -XX:-UseCompactObjectHeaders
+ * @requires vm.flagless
+ * @library /test/lib
+ * @modules java.base/jdk.internal.misc
+ *          java.management
+ * @run driver VMOptionWarning UseObjectMonitorTable
  */
 
 import jdk.test.lib.process.ProcessTools;
@@ -82,11 +113,32 @@ public class VMOptionWarning {
                 output.shouldContain("Error: VM option 'PrintInlining' is diagnostic and must be enabled via -XX:+UnlockDiagnosticVMOptions.");
                 break;
             }
+            case "DiagnosticCompileCommand": {
+                pb = ProcessTools.createLimitedTestJavaProcessBuilder("-XX:CompileCommand=PrintAssembly,MyClass::myMethod", "-version");
+                output = new OutputAnalyzer(pb.start());
+                output.shouldNotHaveExitValue(0);
+                output.shouldContain("Error: VM option 'PrintAssembly' is diagnostic and must be enabled via -XX:+UnlockDiagnosticVMOptions.");
+                break;
+            }
             case "Develop": {
                 pb = ProcessTools.createLimitedTestJavaProcessBuilder("-XX:+VerifyStack", "-version");
                 output = new OutputAnalyzer(pb.start());
                 output.shouldNotHaveExitValue(0);
                 output.shouldContain("Error: VM option 'VerifyStack' is develop and is available only in debug version of VM.");
+                break;
+            }
+            case "CompactObjectHeaders": {
+                pb = ProcessTools.createLimitedTestJavaProcessBuilder("-XX:+UseCompactObjectHeaders", "-XX:+UnlockDiagnosticVMOptions", "-XX:-UseObjectMonitorTable", "-version");
+                output = new OutputAnalyzer(pb.start());
+                output.shouldHaveExitValue(0);
+                output.shouldContain("warning: -UseObjectMonitorTable is incompatible with +UseCompactObjectHeaders; ignoring -UseObjectMonitorTable");
+                break;
+            }
+            case "UseObjectMonitorTable": {
+                pb = ProcessTools.createLimitedTestJavaProcessBuilder("-XX:+UnlockDiagnosticVMOptions", "-XX:-UseObjectMonitorTable", "-version");
+                output = new OutputAnalyzer(pb.start());
+                output.shouldHaveExitValue(0);
+                output.shouldContain("warning: -UseObjectMonitorTable is incompatible with +UseCompactObjectHeaders; ignoring -UseObjectMonitorTable");
                 break;
             }
             default: {
